[gd_scene load_steps=4 format=3 uid="uid://c7m2x8n5k3p2b"]

[ext_resource type="Script" path="res://scripts/tests/alien_ai_test_runner.gd" id="1"]
[ext_resource type="Script" path="res://scripts/battlescape/ai_manager.gd" id="2"]
[ext_resource type="Script" path="res://scripts/battlescape/alien_ai.gd" id="3"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 18
font_color = Color(1, 1, 1, 1)

[node name="AlienAITestRunner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
text = "Alien AI System Tests"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="TestOutput" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
editable = false
wrap_mode = 1

[node name="RunTestsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Run Tests"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_right = 0.5
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
text = "Ready to run tests..."
horizontal_alignment = 1

[connection signal="pressed" from="RunTestsButton" to="." method="_on_run_tests_pressed"]
